# OpenBio

./: .gitignore  AGENTS_OPENBIO.md  Dockerfile  MANIFEST.in  README.md  Run_Upload_pypi.sh  docker-compose.yml  pyproject.toml  user_query
OpenBio/: __init__.py
OpenBio/skills/search-claude-scientific-skills/: SKILL.md
OpenBio/skills/search-claude-scientific-skills/scripts/: search_install.py
biodeep/: __init__.py  cli.py
cli_cp/deepagents_cli/: ASCII_Banner.py
openbioskill/: __init__.py  cli.py  installer.py
scripts/: start_codex_with_skill_test.sh  start_codex_with_skills_folder.sh
skills/: __init__.py
skills/hubmap-rag/: SKILL.md
skills/hubmap-rag/agents/: openai.yaml
skills/hubmap-rag/parsed/: DUA_040719_final.json  DUA_040719_final.md  DUA_040719_final.txt  s41592-024-02563-5.json  s41592-024-02563-5.md  s41592-024-02563-5.txt  vbaf048.json  vbaf048.md  vbaf048.txt
