[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenBioSkill"
version = "0.1.0"
description = "OpenBio CLI and skill bundles."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Xiang Li" }]
keywords = ["bioinformatics", "cli", "skills"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
deepagents = "OpenBio.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["OpenBioSkill*"]

[tool.setuptools.package-data]
OpenBio = ["skills/**"]
