[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openbioskill"
version = "0.1.1"
description = "OpenBio CLI and skill bundles."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Xiang Li" }]
keywords = ["bioinformatics", "cli", "skills"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
openbio = "openbioskill.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["openbioskill*", "skills"]

[tool.setuptools.package-data]
skills = ["**/*"]

[tool.setuptools.exclude-package-data]
skills = ["**/__pycache__/*", "**/*.pyc", "**/*.pyo"]
